--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>First Chart</title>
+  <title>Plotly-Challenge</title>
   <link rel="stylesheet" href="bootstrap.min.css">
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
